# coorish

./: .env.example  .gitignore  CHANGELOG.md  coorish.cabal  flake.nix  hie.yaml
app/: Env.hs  Jira.hs  Ldap.hs  Main.hs  Server.hs
console/: console.cabal
console/app/: Console.hs
coorish/: coorish.cabal
coorish/src/: Coorish.hs  Env.hs  Jira.hs  Ldap.hs
server/: server.cabal
src/: Coorish.hs
