cabal-version:      2.4
name:               coorish
version:            0.1.0.1
author:             Shestakov, Aleksandr
maintainer:         a.shestakov@itransition.com
extra-source-files: CHANGELOG.md

executable coorish
  main-is:            Main.hs
  other-modules:
    Env
    Jira
    Ldap

  ghc-options:        -fwrite-ide-info -hiedir=.hie
  default-extensions:
    NoImplicitPrelude
    DeriveGeneric
    LambdaCase
    OverloadedStrings
    RecordWildCards
    StrictData

  build-depends:
    , aeson
    , attoparsec
    , base
    , base64-bytestring
    , case-insensitive
    , email-validate
    , envy
    , http-client
    , http-client-tls
    , ldap-client
    , relude
    , servant
    , servant-client
    , servant-client-core
    , template-haskell
    , text
    , text-ldap

  hs-source-dirs:     app
  default-language:   Haskell2010
