cabal-version:      2.4
name:               coorish
version:            0.2.0.0
author:             Shestakov, Aleksandr
maintainer:         a.shestakov@itransition.com
extra-source-files: CHANGELOG.md

executable coorish
  main-is:            Main.hs
  other-modules:
    Env
    Jira
    Ldap

  ghc-options:        -fwrite-ide-info -hiedir=.hie
  default-extensions:
    NoImplicitPrelude
    DeriveGeneric
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    RecordWildCards
    StrictData

  build-depends:
    , aeson
    , attoparsec
    , base
    , base64-bytestring
    , case-insensitive
    , containers
    , email-validate
    , envy
    , http-client
    , http-client-tls
    , ldap-client
    , relude
    , servant
    , servant-client
    , servant-client-core
    , template-haskell
    , text
    , text-ldap
    , unordered-containers

  hs-source-dirs:     app
  default-language:   Haskell2010
