cabal-version:      2.4
name:               console
version:            0.3.0.0
author:             Shestakov, Aleksandr
maintainer:         a.shestakov@itransition.com
extra-source-files: CHANGELOG.md

executable coorish-console
  main-is:            Console.hs
  hs-source-dirs:     app
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards

  build-depends:
    , base
    , coorish
    , relude

  default-language:   Haskell2010
