cabal-version:      2.4
name:               server
version:            0.3.0.1
author:             Shestakov, Aleksandr
maintainer:         a.shestakov@itransition.com
extra-source-files: CHANGELOG.md

executable coorish-server
  main-is:            Server.hs
  hs-source-dirs:     app
  default-extensions:
    NoImplicitPrelude
    DataKinds
    OverloadedStrings
    RecordWildCards

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , concurrency
    , coorish
    , relude
    , servant-server
    , text
    , wai-extra
    , warp

  default-language:   Haskell2010
